index + about us content

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,9 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<!-- favicon -->
 	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
@@ -59,8 +67,8 @@
 		</div>
 
 		<div class="hero_text">
-			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
-			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h3>
+			<h2 class="hero_title">ABOUT THE TRAA</h2>
+			<h3 class="hero_subtitle">Discover more about who the TRAA is, what we do for the community, and how to become a member.</h3>
 		</div>
 	</header>
 
@@ -74,9 +82,8 @@
       <div class="section_division"></div>
       <div id="about_content" class="about_content_desktop">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
+					In the spring of 1986, the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River. The TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.<br>
+					<br>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidance of the General Membership, sets the policies and direction for the TRAA. The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhabitants.
         </p>
       </div>
     </section>
@@ -86,30 +93,58 @@
       <h2 class="hidden">Events details</h2>
 			<!-- Collapsible 1 -->
       <div class="collapsible_1 col_event_bcg">
-				<h2>NAME OF EVENT</h2>
-				<h3>DATE</h3>
+				<h2>SALMONID MONITORING PROGRAM</h2>
+				<h3>Began: Spring, 2012</h3>
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
 			<div class="collapsible_1_content">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
+					Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program.<br>
+					<br>Jon George, an MNR biologist from Thunder Bay who is helping us out with this project, compiled the comparative results of 2010 (Year 1) and 2011 (Year 2) and 2012 (Year 3) in an easy-to-understand report.<br>
+					<br>We'll be doing it all over again during the spring of 2013 for Year 4.
+				</p>
+				<a href="https://www.youtube.com/watch?v=A4lJqdQ3YMA" target="_blank">
+					<img src="images/about-project_1-img1.jpg" alt="T.R.A.A. volunteers working on the Salmonid Monitoring Program">
+				</a>
+				<p>
+					Click the video to check out Rob Huber’s video compilation!
 				</p>
 			</div>
 
 			<!-- Collapsible 2 -->
       <div class="collapsible_2 col_event2_bcg">
-				<h2>NAME OF EVENT</h2>
-				<h3>DATE</h3>
+				<h2>TRAA TROUT HATCHERY</h2>
+				<h3>Began: 1986</h3>
 				<i class="fas fa-chevron-down arrow_two"></i>
 			</div>
 			<div class="collapsible_2_content">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
+					The TRAA Trout Hatchery began in the mid-1980's as an outdoor upwelling box located adjacent to Komoka Creek on private property. While it was a simple and rustic affair, the TRAA enjoyed incredible egg hatching and fry survivability rates for several seasons.
 				</p>
+				<div class="col_2_cont_flex">
+					<img src="images/about-project_2-img1.jpg" alt="Upwelling box with individual outlets.">
+					<img src="images/about-project_2-img2.jpg" alt="Back of the upwelling box with the spring source supply pipe.">
+				</div>
+				<p>
+					The picture on the left shows the front of the upwelling box with the individual outlets for each segregated cell emptying into a trough running along the front of the box. The shot on the right shows the back of the upwelling box with the spring source supply pipe feeding each separate valve for every cell. The stainless steel tank in the background was re-purposed from a milking operation into a fry holding tank. The box on the top of the tank housed the automatic feeder.<br>
+					<br>While this setup served us well it was also very challenging to maintain. We had to pack the upwelling box with straw bales (see picture above right) to keep the water in the cells from freezing. Members of the Trout Hatchery Rotation had to huddle over each cell picking eggs in wind-driven rain, sleet and snow. Something had to be done so a new setup was housed in a new enclosure.<br>
+					<br>This facility consisted of a hatching trough with trays, a stainless steel fry box and a 6-foot diameter growth tank. The tray-style of egg incubation was used for many years after the enclosure was built. It had its faults but as you can see, the comfort level for the egg pickers was beyond compare.<br> 
+					<br>In the fall of 2012 we retro-fitted the old fry box into a single-cell fry box for brook trout eggs. Always looking to improve, the TRAA Tout Committee began looking at ways to emulate the success we had with the upwelling box when it was outside. To that end we had a new one constructed by the carpentry class at H.B. Beal Secondary School and they did a great job!
+				</p>
+				<img src="images/about-project_2-img3.jpg" alt="The box in its raw form on the shop floor.">
+				<p>
+					The picture above show the box in its "raw" form on the shop floor at H.B. Beal Secondary School. It was constructed of marine plywood and ingeniously fastened together for strength.<br>
+					<br>In the summer of 2013 TRAA members trucked it out to the hatchery site and wrestled it down the several flights of stairs to the enclosure. It was then painted and assembled, fitted with its plumbing and drains, caulked and tested then caulked again.
+				</p>
+				<img src="images/about-project_2-img4.jpg" alt="New upwelling box as it sits in its first year of service.">
+				<p>
+					This is the new upwelling box as it sits in its first year of service. There are six cells, each completely segregated from the rest. This will allow us to incubate one, two or even three species of trout at once!<br>
+					<br>The two panels at the back with the single handles are hinged to be easily swung up so that the egg trays can be maintained. Once the eggs hatch the trays are removed and the fry begin consuming their egg sacs. Once they've used up their egg sacs they begin to move around actively. This is called the "swim-up" stage and they drift into the front array of their cells. The top panels with the double handles lift right off for access to the front array of the cells where the newly hatched fry will end up once they've reached the "swim-up" stage.<br>
+					<br>Currently we hatch both brown trout and brook trout together in the fall through to spring. While the browns are growing in the large circular tank, the brook trout will be in the stainless steel rectangular tank you can see on the right along the back wall. Rainbow trout eggs are introduced to the upwelling box n the early spring when the browns and brookies are still in the tanks. They will be released before the rainbows are ready to be transferred to the circular growth tank.<br>
+					<br>One of the most important mandates of the TRAA Trout Hatchery is the conducting of regular tours. Those in attendance are treated to the stages in a trout's life cycle that cannot normally be witnessed. If you and/or your group are interested in a tour, please contact us.<br>
+					<br>The TRAA transfer tank is only a temporary home for these trout fry. After the water temperature in the bags has been closely acclimated to that of the stream, the trout fry are carefully released into their new environs.
+				</p>
+				<img src="images/about-project_2-img5.jpg" alt="Trout fry about to be released into their new environs.">
 			</div>
 
     </section>
@@ -123,9 +158,8 @@
 				<div id="become_image"></div>
 	      <div id="become_content">
 	        <p>
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
+						Join our family for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community. You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being part of the solution!<br>
+						<br>Efforts are also underway to get money to continue and improve many of the TRAA’s most vital projects. This will include improvements to the TRAA Trout Hatchery and continuation of the Salmonid Monitoring Program.
 	        </p>
 	        <button>READ MORE</button>
 	      </div>
@@ -139,38 +173,38 @@
       <div class="section_division"></div>
       <div id="team_info">
       <!-- member 1 -->
-          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <img src="images/created_icons_headshot.svg" alt="Team member photo">
 					<div class="team_info_1">
-						<h2>NAME OF THE PERSON</h2>
-	          <h3>TITLE</h3>
+						<h2>RON HUBER</h2>
+	          <h3>President</h3>
 					</div>
 
       <!-- member 2 -->
-          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <img src="images/created_icons_headshot.svg" alt="Team member photo">
 					<div class="team_info_2">
-						<h2>NAME OF THE PERSON</h2>
-	          <h3>TITLE</h3>
+						<h2>PAUL HOLMES</h2>
+	          <h3>Vice-President</h3>
 					</div>
 
       <!-- member 3 -->
-          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <img src="images/created_icons_headshot.svg" alt="Team member photo">
 					<div class="team_info_3">
-						<h2>NAME OF THE PERSON</h2>
-	          <h3>TITLE</h3>
+						<h2>JEREMY BEATON</h2>
+	          <h3>Secretary</h3>
 					</div>
 
       <!-- member 4 -->
-          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <img src="images/created_icons_headshot.svg" alt="Team member photo">
 					<div class="team_info_4">
-						<h2>NAME OF THE PERSON</h2>
-	          <h3>TITLE</h3>
+						<h2>RANDY BAILEY</h2>
+	          <h3>Treasurer</h3>
 					</div>
 
       <!-- member 5 -->
-          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <img src="images/created_icons_headshot.svg" alt="Team member photo">
 					<div class="team_info_5">
-						<h2>NAME OF THE PERSON</h2>
-	          <h3>TITLE</h3>
+						<h2>ADAM BENGEN</h2>
+	          <h3>Chairperson</h3>
 					</div>
       </div>
     </section>
@@ -216,8 +250,11 @@
 
 		<!-- back to top button -->
 		<div id="back_to_top">
-			<a href="#">Back to top</a>
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
 		</div>
+
 		<!-- footer copyrights -->
 		<div id="copyrights">
 			<h3>© Marin-Riddick Enterprises</h3>
