--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<!-- favicon -->
 	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
@@ -75,9 +83,15 @@
 				<div id="about_image"></div>
 				<div id="about_content">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris.
+						The TRAA works at a grassroots level within the Thames River watershed to:
+						<ul id="con_list">
+							<li>protect, enhance and regenerate a viable, multi-species, year-round fishery.</li>
+							<li>promote and participate in environmental clean-up, pollution control and rehabilitation.</li>
+							<li>breed, relocate and stock to re-establish or augment appropriate species of fish.</li>
+							<li>promote environmentally sound sport fishing practices.</li>
+							<li>form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</li>
+							<li>increase public awareness of the unique diversity of the Thames River watershed, it’s challenges, it’s recreational opportunities and it’s vital importance to our community.</li>
+						</ul>
 					</p>
 					<button>READ MORE</button>
 				</div>
@@ -120,9 +134,8 @@
 				<div id="memberships_image"></div>
 				<div id="memberships_content">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris.
+						Join our family for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community. You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being part of the solution!<br>
+						<br>Efforts are also underway to get money to continue and improve many of the TRAA’s most vital projects. This will include improvements to the TRAA Trout Hatchery and continuation of the Salmonid Monitoring Program.
 					</p>
 					<button>READ MORE</button>
 				</div>
@@ -196,11 +209,14 @@
 			</ul>
 		</div>
 	</nav>
-	
+
 		<!-- back to top button -->
 		<div id="back_to_top">
-			<a href="#">Back to top</a>
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
 		</div>
+
 		<!-- footer copyrights -->
 		<div id="copyrights">
 			<h3>© Marin-Riddick Enterprises</h3>
