--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<!-- favicon -->
 	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
@@ -178,11 +186,13 @@
 			</div>
 		</nav>
 
-    <!-- back to top button -->
-    <div id="back_to_top">
-      <a href="#">Back to top</a>
-    </div>
-		
+		<!-- back to top button -->
+		<div id="back_to_top">
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
+		</div>
+
     <!-- footer copyrights -->
     <div id="copyrights">
       <h3>© Marin-Riddick Enterprises</h3>
