--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,8 @@
 		</div>
 
 		<div class="hero_text">
-			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
-			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h3>
+			<h2 class="hero_title">PROJECTS AND EVENTS</h2>
+			<h3 class="hero_subtitle">Check out projects and events that the TRAA has held and see how much fun we had.</h3>
 		</div>
 	</header>
   <!-- MAIN starts -->
@@ -78,9 +78,7 @@
       <div class="section_division"></div>
       <div id="projects_content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
+					This is what sets the TRAA apart from other clubs and organizations. You'll find us right in the water clearing obstructions from streams, measuring returning salmonids & taking scale samples for DNA analysis, education through trout hatchery tours & stream walks, being a voice for the Thames River watershed & its inhabitants and the list goes on.
         </p>
       </div>
     </section>
@@ -91,57 +89,84 @@
 
 			<!-- Collapsible 1 Projects-->
       <div class="collapsible_1 col_proj_bcg">
-				<h2>NAME OF EVENT</h2>
-				<h3>DATE</h3>
+				<h2>ANNUAL PADDLE AND FISH</h2>
+				<h3>JULY 13, 2019</h3>
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
 			<div class="collapsible_1_content">
+				<img id="col_proj_img_1" src="images/projects-project1-img1.jpg" alt="TRAA's Paddle and fish event">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
+					This year's TRAA Paddle & Fish took place on July 13th and we had around a dozen participants from the TRAA, the Forest City Flyfishers and the Western Ontario Fish & Game Protective Association.<br>
+					<br>It was a beautiful day with the thunderstorms holding off for our after-paddle BBQ. This year's route took us from Elgin Road 73, through the town of Dorchester to the Lion's Park just west of town.<br>
+					<br>Most, if not all of us, had never been on this stretch of the South Thames River. Our efforts were rewarded with some of the prettiest scenery that any river has to offer.
+				</p>
+				<img src="images/projects-project1-img2.jpg" alt="Stan with a Thames River Smallie.">
+				<p>
+					Stan with a nice Thames River Smallie.
+				</p>
+				<img src="images/projects-project1-img3.jpg" alt="T.R.A.A. members hanging out.">
+				<p>
+					Many dogs and burgers were consumed. <br>
+					<br>Special thanks to Mary (centre) who got up early in the morning just to shuttle everyone back and forth between the launch site and this park.<br>
+					<br>Also, many thanks to the Dorchester Lion's Club for providing this perfect venue for a BBQ at the end of the Paddle & Fish route.
+				</p>
+				<img src="images/projects-project1-img4.jpg" alt="Paul displaying evidence of a faulty mustard squeeze bottle.">
+				<p>
+					Paul, displaying evidence of a faulty mustard squeeze bottle, presents Ray, this year's proud recipient, with the beautiful and coveted TRAA Paddle & Fish Trophy.
 				</p>
 			</div>
 
 			<!-- Collapsible 2 Projects-->
 			<div class="collapsible_2 col_proj2_bcg">
-				<h2>NAME OF EVENT</h2>
-				<h3>DATE</h3>
+				<h2>RAINBOW TROUT RELEASE</h2>
+				<h3>JUNE 22, 2019</h3>
 				<i class="fas fa-chevron-down arrow_two"></i>
 			</div>
 			<div class="collapsible_2_content">
+				<a  href="https://www.youtube.com/watch?v=B-Z8E_1-_GU" target="_blank">
+					<img id="col_proj_img_1" src="images/projects-project2-video.jpg" alt="Rainbow trout release video.">
+				</a>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
+					We have had a very successful hatch of rainbow trout this year with minimal die-off. However, it was time to say goodbye and turn them loose into their new homes. The donor stream was Dingman Creek.<br>
+					<br>Everything went smoothly and the weather was glorious. It was also great to have a member of the London Environmental Network come out to lend a hand and learn a little bit about what the TRAA is all about.<br>
+					<br>Click on the picture to view an entertaining video of how much fun we had!
 				</p>
 			</div>
 
 		<!-- Collapsible 3 Projects-->
 		<div class="collapsible_3 col_proj3_bcg">
-			<h2>NAME OF EVENT</h2>
-			<h3>DATE</h3>
+			<h2>CHILDREN'S WATER FESTIVAL</h2>
+			<h3>MAY 16-17, 2019</h3>
 			<i class="fas fa-chevron-down arrow_three"></i>
 		</div>
 		<div class="collapsible_3_content">
+			<img id="col_proj_img_1" src="images/projects-project3-img1.jpg" alt="Dad teaching his son how to use a fishing rod.">
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris.
+				The TRAA took part in the "Public Night" portion of the event, Thursday, May 16 from 5:00pm to 8:00pm.<br>
+				The kids cast at fish targets that we had set up and it was much fun for us as it was for the kids!<br>
+				<br>Many thanks to The Western Ontario Fish & Game Protective Association for providing the fish targets and the rods, reels and rubber weights.
+			</p>
+			<img src="images/projects-project3-img2.jpg" alt="Families having fun at the event.">
+			<p>
+				Well over a thousand people came through the gates before 7:30pm for this event!<br>
+				Extra-big thanks to those few members who came out to lend a hand.
 			</p>
 		</div>
 
 		<!-- Collapsible 4 Projects-->
 		<div class="collapsible_4 col_proj4_bcg">
-			<h2>NAME OF EVENT</h2>
-			<h3>DATE</h3>
+			<h2>BROWN TROUT RELEASE</h2>
+			<h3>MAY 4, 2019</h3>
 			<i class="fas fa-chevron-down arrow_four"></i>
 		</div>
 		<div class="collapsible_4_content">
+			<a  href="https://www.youtube.com/watch?v=pl0FUUaXDks&t=2s" target="_blank">
+				<img id="col_proj_img_1" src="images/projects-project4-video.jpg" alt="Brown trout release video.">
+			</a>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris.
+				The brown trout were transferred from the TRAA hatchery and released at the same site on Medway Creek as in previous years.  TRAA members loaded up the trout fry into the transfer tank at the hatchery site. We then proceeded to the release site north of London, Ontario.<br>
+				<br>We were met there by two of the landowners through which this section of Medway Creek flows. They also brought out a large contingent of family and friends to lend a helping hand.<br>
+				<br>This video above gives you a pretty good idea how it went. It was a beautiful day, the stream was in perfect shape and everyone was smiling and laughing. Good times.
 			</p>
 		</div>
 
