get involved content

--- a/getInvolved.html
+++ b/getInvolved.html
@@ -5,9 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<!-- favicon -->
 	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
@@ -18,6 +26,21 @@
 	<header id="mainHeader">
 		<nav id="mainNav">
 			<h2 class="hidden">Main Navigation</h2>
+
+			<!-- social media icons (header) -->
+			<section id="social_media_header">
+				<h2 class="hidden">Social Media Icons</h2>
+				<div id="facebook_header">
+					<a href="https://www.facebook.com/groups/4TRAA/about/" target="_blank">
+						<img src="images/facebook.png" alt="facebook icon" >
+					</a>
+				</div>
+				<div id="email_header">
+					<a href="mailto:traa@anglers.org">
+						<img src="images/email_logo.png" alt="email icon">
+					</a>
+				</div>
+			</section>
 
 	<!-- Burger Menu -->
 			<button id="button"></button>
@@ -34,21 +57,6 @@
 			</div>
 		</nav>
 
-		<!-- social media icons (header) -->
-		<section id="social_media_header">
-			<h2 class="hidden">Social Media Icons</h2>
-			<div id="facebook_header">
-				<a href="https://www.facebook.com/groups/4TRAA/about/" target="_blank">
-					<img src="images/facebook.png" alt="facebook icon" >
-				</a>
-			</div>
-			<div id="email_header">
-				<a href="mailto:traa@anglers.org">
-					<img src="images/email_logo.png" alt="email icon">
-				</a>
-			</div>
-		</section>
-
 		<!-- main logo (header) -->
 		<div id="logoHeader">
 			<a href="index.html">
@@ -57,8 +65,8 @@
 		</div>
 
 		<div class="hero_text">
-			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
-			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h3>
+			<h2 class="hero_title">GET INVOLVED</h2>
+			<h3 class="hero_subtitle">Learn about how to become a member of the TRAA, where meetings are held, and check out a few relevant links.</h3>
 		</div>
 	</header>
 
@@ -74,9 +82,8 @@
 				<div id="involved_image"></div>
 	      <div id="involved_content">
 	        <p>
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris.
+						This is the best membership deal you can buy! Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says you’re a TRAA member and you'll get periodic updates on what you're missing out on.<br>
+						<br>Participate, help out, have fun and give a little bit back to the Thames River watershed! Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!
 	        </p>
 	        <button>READ MORE</button>
 	      </div>
@@ -93,30 +100,80 @@
 				<div id="merchandise_image"></div>
 	      <div id="merchandise_content">
 	        <p>
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris.
+						Many of you have already ordered the TRAA tee shirts, but if you haven't you had better hurry because many sizes are almost sold out! These are a steal at $15 each. There are three different hat colours available: Clay Grey, Burnt Orange and Taupe. If you thought the tee's were a good deal, all three editions of these hats are also priced at $15 each.<br>
+						<br>We now have some nice stickers featuring the TRAA logo that you can display on your vehicle, boat, lunchbox or wherever you like. These are $2 each but you get one for joining the TRAA as a member or renewing an existing TRAA membership. Get your TRAA Gear (makes a great Christmas gift!) at any TRAA event, such as this coming General Meeting.
 	        </p>
 	        <button>READ MORE</button>
 	      </div>
 			</div>
     </section>
 
-    <!-- Useful links section -->
+  <!-- Useful links section -->
     <section>
       <h2 class="hidden">Useful links</h2>
 
-			<!-- Collapsible 1 -->
+		<!-- Collapsible 1 -->
       <div class="collapsible_1 col_links_bcg">
 				<h2>USEFUL LINKS AND INFORMATION</h2>
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
+
 			<div class="collapsible_1_content ">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
-				</p>
+				<!-- conservation links -->
+				<div>
+					<h3 id="links_col_titles" class="firstChild_links">CONSERVATION</h3>
+					<div class="section_division"></div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+					</p>
+				</div>
+
+				<!-- conservation authorities links -->
+				<div>
+					<h3 id="links_col_titles">CONSERVATION AUTHORITIES</h3>
+					<div class="section_division"></div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+					</p>
+				</div>
+
+				<!-- Government agencies links -->
+				<div>
+					<h3 id="links_col_titles">GOVERNMENT AGENCIES</h3>
+					<div class="section_division"></div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+					</p>
+				</div>
+
+				<!-- Local fishing retailers links -->
+				<div>
+					<h3 id="links_col_titles">LOCAL FISHING RETAILERS</h3>
+					<div class="section_division"></div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+					</p>
+				</div>
+
+				<!-- Fishing and related links -->
+				<div>
+					<h3 id="links_col_titles">FISHING & RELATED LINKS</h3>
+					<div class="section_division"></div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+					</p>
+				</div>
+
 			</div>
     </section>
 
@@ -127,9 +184,8 @@
       <div class="section_division"></div>
       <div id="member_content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
+					The best way to join up is to attend a TRAA event or email us for other options. If you want to go old school, you can mail a cheque to us at:<br>
+					<br>Thames River Anglers Association  <br> c/o Western Ontario Fish & Game Protective Association  <br> 790 Southdale Road East <br> London, Ontario <br> N6E 1A8.
         </p>
       </div>
     </section>
@@ -194,10 +250,13 @@
 			</div>
 		</nav>
 
-    <!-- back to top button -->
-    <div id="back_to_top">
-      <a href="#">Back to top</a>
-    </div>
+		<!-- back to top button -->
+		<div id="back_to_top">
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
+		</div>
+		
     <!-- footer copyrights -->
     <div id="copyrights">
       <h3>© Marin-Riddick Enterprises</h3>
