--- a/newsletters.html
+++ b/newsletters.html
@@ -5,9 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+
+	<!-- favicon -->
+	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -56,8 +65,8 @@
 		</div>
 
 		<div class="hero_text">
-			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
-			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h3>
+			<h2 class="hero_title">NEWSLETTERS</h2>
+			<h3 class="hero_subtitle">Look through our archive of newsletters, past and present.</h3>
 		</div>
 	</header>
 
@@ -68,7 +77,13 @@
     <section>
       <h2 class="hidden">Explor our library</h2>
       <h2 id="about_title">EXPLOR OUR LIBRARY</h2>
-      <div class="section_division"></div>
+			<div class="section_division"></div>
+			<div id="involved_content">
+				<p>
+					The first newsletters were banged out manually on a typewriter and then copied about 100 times for distribution. These initial efforts were simple (no pictures or colour!) but they did the job. The latest versions are electronic, emailed to members and other TRAA friends. They feature nice formatting, pictures and yes, colour!<br>
+					<br>The greatest challenge over the years has been getting editions published on time (or at all!). Such is life within a volunteer organization like the TRAA; you have to focus your energies on where they are most effective and a newsletter falls further down that priority list.
+				</p>
+			</div>
       <div id="library_content">
         <img src="images/newsletter_display-cover.png" alt="Newsletters cover">
         <img src="images/newsletter_display-cover.png" alt="Newsletters cover">
@@ -92,9 +107,7 @@
       <div class="section_division"></div>
       <div id="add_content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
+					If you have copies of TRAA newsletters that you don't see listed below, please forward a copy to us by email or bring it to any TRAA event!
 				</p>
 				<button>CONTACT US</button>
       </div>
@@ -139,10 +152,13 @@
 			</div>
 		</nav>
 
-    <!-- back to top button -->
-    <div id="back_to_top">
-      <a href="#">Back to top</a>
-    </div>
+		<!-- back to top button -->
+		<div id="back_to_top">
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
+		</div>
+
     <!-- footer copyrights -->
     <div id="copyrights">
       <h3>© Marin-Riddick Enterprises</h3>
