contact us content

--- a/contactUs.html
+++ b/contactUs.html
@@ -5,9 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<!-- icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
+
+	<!-- fonts -->
+	<link rel="stylesheet" href="https://use.typekit.net/vsu4kqv.css">
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+
+	<!-- favicon -->
+	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -56,8 +65,8 @@
 		</div>
 
 		<div class="hero_text">
-			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
-			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h3>
+			<h2 class="hero_title">CONTACT US</h2>
+			<h3 class="hero_subtitle">Attend group meetings, events, or just reach out for more information.</h3>
 		</div>
 	</header>
 
@@ -71,9 +80,8 @@
       <div class="section_division"></div>
       <div id="member_content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
+					There's a bunch of ways to get in touch with the TRAA via email or social media. We also meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand. The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road. The address is 790 Southdale Road East, London, Ontario or you can see the location on the map below.<br>
+					<br>If you're with a like-minded organization or group looking for more information on the TRAA and its activities. If you're an individual who would like to become involved with the activities undertaken by the TRAA, the TRAA would like to hear from you.
         </p>
       </div>
       <!-- contact map -->
@@ -144,8 +152,11 @@
 
 		<!-- back to top button -->
 		<div id="back_to_top">
-			<a href="#">Back to top</a>
+			<a href="#">
+				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
+			</a>
 		</div>
+
 		<!-- footer copyrights -->
 		<div id="copyrights">
 			<h3>© Marin-Riddick Enterprises</h3>
