index + about us tablet content

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -144,7 +144,7 @@
 					<br>One of the most important mandates of the TRAA Trout Hatchery is the conducting of regular tours. Those in attendance are treated to the stages in a trout's life cycle that cannot normally be witnessed. If you and/or your group are interested in a tour, please contact us.<br>
 					<br>The TRAA transfer tank is only a temporary home for these trout fry. After the water temperature in the bags has been closely acclimated to that of the stream, the trout fry are carefully released into their new environs.
 				</p>
-				<img src="images/about-project_2-img5.jpg" alt="Trout fry about to be released into their new environs.">
+				<img id="about_col_2_img" src="images/about-project_2-img5.jpg" alt="Trout fry about to be released into their new environs.">
 			</div>
 
     </section>
