projects tablet content

--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
 		</div>
 		<div class="collapsible_4_content">
 			<a  href="https://www.youtube.com/watch?v=pl0FUUaXDks&t=2s" target="_blank">
-				<img id="col_proj_img_1" src="images/projects-project4-video.jpg" alt="Brown trout release video.">
+				<img id="col_proj_img_1" class="col_proj_img_4" src="images/projects-project4-video.jpg" alt="Brown trout release video.">
 			</a>
 			<p>
 				The brown trout were transferred from the TRAA hatchery and released at the same site on Medway Creek as in previous years.  TRAA members loaded up the trout fry into the transfer tank at the hatchery site. We then proceeded to the release site north of London, Ontario.<br>
